--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="icon" href="/favicon.ico" />
-  <title>Bathuan Visualizer</title>
+  <title>Batuhan Visualizer</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
