--- a/src/index.html
+++ b/src/index.html
@@ -16,23 +16,23 @@
   <meta property="theme-color" name="theme-color" content="#2563EB">
 
   <meta property="twitter:card" name="twitter:card" content="summary">
-  <meta property="twitter:creator" name="twitter:creator" content="@eggsydev">
+  <meta property="twitter:creator" name="twitter:creator" content="@batuhangrkn">
 
-  <meta property="og:site_name" name="og:site_name" content="Lanyard Visualizer">
+  <meta property="og:site_name" name="og:site_name" content="Batuhan Visualizer">
   <meta property="og:type" name="og:type" content="website">
 
   <meta property="og:image" name="og:image" content="/icon.png">
   <meta property="twitter:image" name="twitter:image" content="/icon.png">
 
-  <meta property="og:title" name="og:title" content="Lanyard Visualizer">
-  <meta property="twitter:title" name="twitter:title" content="Lanyard Visualizer">
+  <meta property="og:title" name="og:title" content="Batuhan Visualizer">
+  <meta property="twitter:title" name="twitter:title" content="Batuhan Visualizer">
 
   <meta property="description" name="description"
-    content="A service to display your Discord status online using Lanyard's API, free and easy to use! Supports Spotify and every RPCs!">
+    content="Free and easy to use! Supports Spotify and every RPCs!">
   <meta property="og:description" name="og:description"
-    content="A service to display your Discord status online using Lanyard's API, free and easy to use! Supports Spotify and every RPCs!">
+    content="Free and easy to use! Supports Spotify and every RPCs!">
   <meta property="twitter:description" name="twitter:description"
-    content="A service to display your Discord status online using Lanyard's API, free and easy to use! Supports Spotify and every RPCs!">
+    content="Free and easy to use! Supports Spotify and every RPCs!">
 </head>
 
 <body>
